--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laser Chess</title>
+    <title>OpenSphinx - Laser Chess</title>
   </head>
   <body>
     <div id="root"></div>
