feat: add header/footer components and update site branding

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,33 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OpenSphinx - Laser Chess</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>OpenSphinx - Laser Chess</title>
+  <meta name="description" content="Open-source laser chess game with multiplayer support" />
+  <meta name="keywords" content="laser chess, khet, board game, multiplayer, open source" />
+  <meta name="author" content="OpenSphinx" />
+
+  <meta property="og:title" content="OpenSphinx - Laser Chess" />
+  <meta property="og:description" content="Open-source laser chess game with multiplayer support" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://opensphinx.online/">
+  <meta property="og:site_name" content="OpenSphinx">
+  <meta property="og:image" content="https://opensphinx.online/logo.svg">
+  <meta property="og:image:width" content="64">
+  <meta property="og:image:height" content="64">
+  <meta property="og:image:type" content="image/svg+xml">
+  <meta property="og:image:alt" content="OpneSphinx logo - front view of an animated looking sphinx">
+
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="https://opensphinx.online/logo.svg">
+  <link rel="apple-touch-icon" href="https://opensphinx.online/apple-touch-icon.png">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
