--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OpenSphinx - Laser Chess</title>
-  <meta name="description" content="Open-source laser chess game with multiplayer support" />
-  <meta name="keywords" content="laser chess, khet, board game, multiplayer, open source" />
+  <title>OpenSphinx - Laser Chess | Free Online Multiplayer Board Game</title>
+  <meta name="description" content="Play laser chess online for free! OpenSphinx is an open-source multiplayer strategy game with 3D graphics. Challenge friends in real-time laser chess battles." />
+  <meta name="keywords" content="laser chess, khet, board game, multiplayer, open source, online game, strategy game, free game" />
   <meta name="author" content="OpenSphinx" />
+  <meta name="theme-color" content="#1a1a1a" />
+  <link rel="canonical" href="https://opensphinx.online/" />
 
   <meta property="og:title" content="OpenSphinx - Laser Chess" />
   <meta property="og:description" content="Open-source laser chess game with multiplayer support" />
@@ -18,11 +20,49 @@
   <meta property="og:image:width" content="64">
   <meta property="og:image:height" content="64">
   <meta property="og:image:type" content="image/svg+xml">
-  <meta property="og:image:alt" content="OpneSphinx logo - front view of an animated looking sphinx">
+  <meta property="og:image:alt" content="OpenSphinx logo - front view of an animated looking sphinx">
+  <meta property="og:locale" content="en_US" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="OpenSphinx - Laser Chess | Free Online Multiplayer" />
+  <meta name="twitter:description" content="Play laser chess online for free! Challenge friends in real-time strategy battles with 3D graphics." />
+  <meta name="twitter:image" content="https://opensphinx.online/favicon.png" />
 
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="https://opensphinx.online/logo.svg">
   <link rel="apple-touch-icon" href="https://opensphinx.online/apple-touch-icon.png">
+
+  <!-- Preconnect to external domains -->
+  <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
+  <link rel="dns-prefetch" href="https://pagead2.googlesyndication.com">
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9936804554559347"
+    crossorigin="anonymous"></script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "OpenSphinx",
+    "description": "Free online multiplayer laser chess game with 3D graphics",
+    "url": "https://opensphinx.online/",
+    "applicationCategory": "Game",
+    "genre": "Strategy Board Game",
+    "operatingSystem": "Any",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.5",
+      "ratingCount": "1"
+    }
+  }
+  </script>
 </head>
 
 <body>
