--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,15 @@
   <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="https://opensphinx.online/logo.svg">
   <link rel="apple-touch-icon" href="https://opensphinx.online/apple-touch-icon.png">
 
+  <!-- OpenMoji Font -->
+  <style>
+    @font-face {
+      font-family: "OpenMoji";
+      src: url("https://cdn.jsdelivr.net/gh/hfg-gmuend/openmoji/font/OpenMoji-color-glyf_colr_0/OpenMoji-color-glyf_colr_0.woff2") format("woff2");
+      unicode-range: U+1F1E6-1F1FF;
+    }
+  </style>
+
   <!-- Preconnect to external domains -->
   <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
   <link rel="dns-prefetch" href="https://pagead2.googlesyndication.com">
