Some fixes for AdSense

--- a/client/index.html
+++ b/client/index.html
@@ -57,21 +57,59 @@
   {
     "@context": "https://schema.org",
     "@type": "WebApplication",
-    "name": "OpenSphinx",
-    "description": "Free online multiplayer laser chess game with 3D graphics",
+    "name": "OpenSphinx - Laser Chess",
+    "alternateName": "OpenSphinx",
+    "description": "Free online multiplayer laser chess game with 3D graphics. Play Khet-style strategy board game in your browser with real-time multiplayer, save/load functionality, and spectator mode.",
     "url": "https://opensphinx.online/",
     "applicationCategory": "Game",
-    "genre": "Strategy Board Game",
+    "genre": ["Strategy Board Game", "Multiplayer Game", "Turn-Based Strategy"],
     "operatingSystem": "Any",
+    "browserRequirements": "Requires JavaScript. Works on Chrome 90+, Firefox 88+, Safari 14+, Edge 90+",
     "offers": {
       "@type": "Offer",
       "price": "0",
-      "priceCurrency": "USD"
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock"
     },
-    "aggregateRating": {
-      "@type": "AggregateRating",
-      "ratingValue": "4.5",
-      "ratingCount": "1"
+    "featureList": [
+      "3D graphics with Three.js",
+      "Real-time multiplayer gameplay",
+      "Game save and load functionality",
+      "Discord authentication",
+      "Multiple game variants",
+      "Spectator mode",
+      "Cross-platform support"
+    ],
+    "screenshot": "https://opensphinx.online/logo.svg",
+    "author": {
+      "@type": "Organization",
+      "name": "OpenSphinx Contributors",
+      "url": "https://github.com/neofuzz/OpenSphinx"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "OpenSphinx",
+      "url": "https://opensphinx.online/"
+    },
+    "inLanguage": ["en", "es", "fr", "de", "ja", "zh"],
+    "isAccessibleForFree": true,
+    "license": "https://www.gnu.org/licenses/agpl-3.0.html"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "VideoGame",
+    "name": "OpenSphinx Laser Chess",
+    "description": "Strategic board game combining chess-like movement with laser beam mechanics",
+    "url": "https://opensphinx.online/",
+    "gamePlatform": ["Web Browser", "Android"],
+    "genre": "Strategy",
+    "playMode": ["MultiPlayer", "CoOp"],
+    "numberOfPlayers": {
+      "@type": "QuantitativeValue",
+      "minValue": 2,
+      "maxValue": 2
     }
   }
   </script>
